# selqie

./: .gitignore  LICENSE  README.md  run_dev.sh  water_shutdown.py
actuation/actuation_msgs/: CMakeLists.txt  package.xml
actuation/odrive_control/: CMakeLists.txt  README.md  package.xml
bar100_ros2/: README.md  package.xml  setup.cfg  setup.py
can_bus/: CMakeLists.txt  README.md  package.xml
can_bus/launch/: can0.launch.py  can1.launch.py
can_bus/src/: can_bus_node.cpp
docker/: Dockerfile  build.sh  build_dev.sh  entrypoint.sh  run.sh  run_dev.sh
docs/: Hardware.md  JetsonAGX-Setup.md  SELQIE_SOP.md
explorehd_ros2/: CMakeLists.txt  package.xml
explorehd_ros2/src/: explorehd_stereo_node.cpp
gait_planning/: CMakeLists.txt  notes.md  package.xml
ground_plane_detection/: CMakeLists.txt  package.xml
ground_plane_detection/launch/: CLA_Final.launch.py
ground_plane_detection/matlab/: results.m
ground_plane_detection/src/: complinalg_final_project.cpp  ground_plane_detection_node.cpp
jetson_ros2/: README.md  package.xml  setup.cfg  setup.py
leg_gaits/: package.xml  setup.cfg  setup.py
leg_kinematics/: CMakeLists.txt  package.xml
leg_kinematics/include/leg_kinematics/: leg_kinematics_node.hpp
leg_kinematics/launch/: fivebar2d.launch.py  unitree_a1_leg.launch.py
leg_kinematics/src/: fivebar2d_node.cpp  leg_trajectory_publisher_node.cpp  rr2d_node.cpp  unitree_a1_leg_node.cpp
legged_mpc/: CMakeLists.txt  package.xml
legged_mpc/include/legged_mpc/: _backup.hpp  legged_mpc.hpp  legged_mpc_2d.hpp  mpc.hpp  osqp.hpp  osqp_mpc.hpp
legged_mpc/src/: body_trajectory_node.cpp  foothold_planner_node.cpp  legged_mpc_2d_node.cpp  legged_mpc_node.cpp  swing_leg_node.cpp
local_planning/: CMakeLists.txt  package.xml
local_planning/include/local_planning/: walking_model.hpp  walking_planner_model.hpp
local_planning/src/: jumping_planner_node.cpp  swimming_planner_node.cpp  test_grid_map_node.cpp  walking_planner_node.cpp
matlab/: JumpTestResults.m  StrideGenerationVisualizer.m  SwimBack_TestFootSpace.csv  SwimFront_TestFootSpace.csv  SwimTestResults.m  Walk3DPFootSpace.csv  bag2avi.m  convert_append_trajectory.m  convert_trajectory.m  fivebar_kinematics.m  generateMsgs.m  jump.txt  jump_trajectory.m  parseROSBag.m  rock_image_rgb.m  swim.txt  swim_stride_solve.m  test.m  walk_planner_debug.m  walk_stride_cmd_map.m
mujoco_ros2/: CMakeLists.txt  package.xml
mujoco_ros2/include/mujoco_ros2/: mujoco.hpp
mujoco_ros2/launch/: unitree_a1_sim.launch.py
mujoco_ros2/src/: mujoco_node.cpp
odrive_ros2/: CMakeLists.txt  package.xml
odrive_ros2/launch/: odrive_can.launch.py
odrive_ros2/src/: odrive_can_node.cpp  odrive_cmd_node.cpp
robot_experiments/: package.xml  setup.cfg  setup.py
robot_joysticks/: package.xml  setup.cfg  setup.py
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: BodyTrajectory.msg  CanFrame.msg  FootholdState.msg  GaitTrajectory.msg  JetsonStatus.msg  LegCommand.msg  LegEstimate.msg  LegTrajectory.msg  MotorCommand.msg  MotorConfig.msg  MotorEstimate.msg  ODriveInfo.msg  StancePattern.msg
robot_msgs/srv/: MakeStride.srv
robot_tests/: package.xml  setup.py
robot_utils/: package.xml  setup.py
selqie_bringup/: package.xml
selqie_bringup/tmux/: selqie.sh  (+1 more)
selqie_localization/: CMakeLists.txt  package.xml
selqie_perception/: CMakeLists.txt  package.xml
selqie_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
selqie_ros2/config/: calibration_left.yaml  calibration_right.yaml  command_velocity_filter.yaml  disparity_config.yaml  ekf_config.yaml  gait_config.yaml  gait_planning_config.yaml  imu_calibration.txt  imu_config.yaml  jump_config.yaml  jumping_planner_config.yaml  legged_mpc_config.yaml  local_planning_config.yaml  rviz_config.rviz  sink_config.yaml  stand_config.yaml  swim_config.yaml  swimming_planner_config.yaml  terrain_mapping_config.yaml  vslam_config.yaml  walk2d_config.yaml  walk_config.yaml  walking_planner_config.yaml
selqie_ros2/launch/: actuation.launch.py  bar100.launch.py  ekf.launch.py  gait_planning.launch.py  gaits.launch.py  imu.launch.py  legs.launch.py  lights.launch.py  local_planning.launch.py  localization_and_stereo.launch.py  mujoco.launch.py  odrives.launch.py  selqie.launch.py  selqie_mujoco.launch.py  selqie_playback.launch.py  sensor_fusion.launch.py  sensors.launch.py  slam.launch.py  slam_test.launch.py  stereo_calibration.launch.py  stereo_cameras.launch.py  stereo_cameras_disparity.launch.py  stereo_cameras_disparity_nitro.launch.py  stereo_cameras_disparity_only.launch.py  stereo_cameras_disparity_playback.launch.py  stereo_cameras_nitro.launch.py  stereo_cameras_only.launch.py  stereo_cameras_rviz.launch.py  stereo_cameras_rviz.py  stereo_cameras_vslam.launch.py  terrain_mapping.launch.py  tf.launch.py  urdf.launch.py  visualization.launch.py
selqie_ros2/model/: scene.xml  selqie.xml
selqie_ros2/scripts/: selqie_joystick.py  selqie_rviz.py  selqie_terminal.py
selqie_ros2/scripts/tests/: odom_tf_publisher.py  plot_control_data.py  plot_depth_data.py  plot_imu_data.py  test_imu.py  test_leg_control.py  walk_stride_sweep.py  walk_stride_tracking.py
selqie_ros2/selqie_ros2/: selqie.py  selqie_joystick.py  selqie_terminal.py
starq_experiments/: CMakeLists.txt  package.xml
starq_ros2/: CMakeLists.txt  package.xml
stereo_usb_cam/: CMakeLists.txt
stereo_usb_cam/src/: stereo_usb_cam.cpp  stereo_usb_cam_node.cpp
stride_maker/: CMakeLists.txt  README.md  notes.md  package.xml
stride_maker/include/stride_maker/: stride_maker.hpp  stride_maker_node.hpp
stride_maker/src/: command_velocity_filter_node.cpp  jump_node.cpp  sink_node.cpp  stand_node.cpp  stride_maker_node.cpp  swim_node.cpp  walk2d_node.cpp  walk_node.cpp
terrain_mapping/: CMakeLists.txt  package.xml
tmux/: selqie.sh  selqie_mujoco.sh  selqie_playback.sh  starq.sh  unitree_a1.sh
tools/: install.sh  load_can.service  play_rosbag.sh  start_selqie_hotspot.sh  update_stereo_calibration.sh
unitree_a1_mujoco/: CMakeLists.txt  package.xml
util_scripts/: package.xml  setup.cfg  setup.py
(+147 files in other folders)
